[Update] ai-chain.ipynb to have LLM calling and basic chain

--- a/ai-chain.ipynb
+++ b/ai-chain.ipynb
@@ -1,5 +1,64 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#import system packages\n",
+    "import os\n",
+    "import sys\n",
+    "\n",
+    "#import langchain modules\n",
+    "from langchain_ollama import ChatOllama\n",
+    "from langchain_core.documents import Document\n",
+    "from langchain_text_splitters import RecursiveCharacterTextSplitter\n",
+    "from langchain_community.document_loaders import (unstructured,\n",
+    "                                                  UnstructuredExcelLoader,\n",
+    "                                                  CSVLoader,\n",
+    "                                                  PyMuPDFLoader,\n",
+    "                                                  Docx2txtLoader,\n",
+    "                                     dd             )\n",
+    "from langchain import hub\n",
+    "from langchain_core.output_parsers import StrOutputParser\n",
+    "from langchain_core.runnables import RunnablePassthrough\n",
+    "from langchain_core.prompts import ChatPromptTemplate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "llm = ChatOllama(\n",
+    "   model=\"llama3\",\n",
+    "   temperature=0,)\n",
+    "prompt = ChatPromptTemplate.from_template(\"Tell me a joke about {topic}\")\n",
+    "chain = prompt | llm | StrOutputParser()\n",
+    "for chunk in chain.stream({\"topic\": \"McDonald's\"}):\n",
+    "   print(chunk, end = \"\", flush = True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt = hub.pull(\"rlm/rag-prompt\")\n",
+    "rag_chain = (\n",
+    "    {\"context\": retriever | format_docs, \"question\": RunnablePassthrough()}\n",
+    "    | prompt\n",
+    "    | llm\n",
+    "    | StrOutputParser()\n",
+    ")\n",
+    "\n",
+    "rag_chain.invoke(\"What is Task Decomposition?\")"
+   ]
+  }
+ ],
  "metadata": {
   "kernelspec": {
    "display_name": "python310_langchain",
